Tomcat 9 is available in Focal, updated tomcat installer and setdown script